--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -72,3 +72,13 @@
     @apply bg-background text-foreground;
   }
 }
+@layer utilities {
+  .header-button {
+    @apply cursor-pointer p-1 border border-transparent rounded-[2px];
+  }
+
+  .h1-bold {
+    @apply font-bold text-2xl lg:text-3xl;
+  }
+}
+
